fixed- URL(String) in URL has been deprecated